# miRobot

./: .cproject  .gitignore  .project  CMakeLists.txt  index.md  package.xml
codigo/: Comandos.cpp  Comandos.h  Laser.cpp  Laser.h  listener.cpp  listener.h  listner.cpp  listner.h  miRobot.cpp  miRobot.h
extras/control_remoto/: CMakeLists.txt
extras/control_remoto/src/: main.cc  mainDialog.cc  mainDialog.h
extras/controlador1/: CMakeLists.txt  config.sh
extras/controlador1/algoritmos/: CMakeLists.txt
extras/controlador1/algoritmos/sobel/: CMakeLists.txt
extras/controlador1/algoritmos/sobel/src/: sobel.cpp  sobel.h
extras/controlador1/src/: algoritmoPlugin.cpp  algoritmoPlugin.h  main.cpp  main.h  plugin.cpp  plugin.h
extras/controlador1/src/dll/: librerias.cpp  librerias.h
extras/teVeo/: CMakeLists.txt
extras/teVeo/src/: camara.cpp  camara.h  camara_main.cpp
programas/: .avanzar.swp  avanzar  coger  girarDerecha  girarDerechaTortuga  mover  moverFuerza  parar  reposo  retroceder
src/: Comandos.cpp  Comandos.h  comandos.cpp  comandos.h  listener.cpp  listener.h  miRobot.cpp  miRobot.h  world.cpp
src/sensores/: Laser.cpp  Laser.h  camara.cpp  camara.h
worlds/: miRobot.world  miRobot2.sdf  miRobot2.world  miRobot3.world  tortuga.world
worlds/launcher/: miRobot.launcher  miRobot2.launcher  mi_robot_unico.launch  mi_robot_web.launch  tortuga.launcher
worlds/robot/: .gitignore  brazo.dae  brazo.stl  brazo2.dae
worlds/robot/Mi robot/: model.config  r.blend  r.dae  r.sdf
